# ModdingCode

./: .gitignore  README.md  config.sh  package.json
base/: .env-example  config.sh  dev.py  main.py  pyproject.toml
base/src/: buckets.py  common.py  lambdas.py  registry.py  stacks.py  tables.py
base/src/commons/: conf.py  entities.py  file_finder.py  http.py  security.py
base/src/minicourse/: lambdas.py  rest_api.py  stack.py  storage.py
base/src/problem/: lambdas.py  rest_api.py  stack.py  storage.py
base/src/video/: lambdas.py  parameters.py  rest_api.py  stack.py  storage.py
base/tasks/: methods.py  tasks.yml
commons/tasks/: __init__.py  interface.py  task.py
logic/: config.sh  pyproject.toml
logic/op/: interface.py
logic/src/: hey.py
logic/src/common/: aws_cli.py  logging.py  settings.py
logic/src/modding/common/: aws_cli.py  exception.py  http.py  logging.py  model.py  repo.py  settings.py
logic/src/modding/common/auth0/: authorizer.py
logic/src/modding/minicourse/: create_minicourse.py  delete_minicourse.py  get_minicourse.py  models.py  repository.py  update_minicourse.py
logic/src/modding/minicourse/category/: create_category.py  delete_category.py  get_category.py  repository.py  update_category.py
logic/src/modding/problem/: create_problem.py  delete_problem.py  get_problem.py  models.py  repository.py  send_question.py  send_response.py  signup.py  update_problem.py  upload_test_cases.py
logic/src/modding/problem/evaluation/: evaluate_problem.py  get_evaluation.py  repository.py
logic/src/modding/utils/: analizer.py  date.py  email.py  files.py  function.py  id_generator.py  jwt.py
logic/src/modding/video/: create_video.py  delete_video.py  get_video.py  models.py  repository.py  update_video.py
logic/src/modding/video/utils/: date_format.py
logic/src/video/: create_video.py
logic/tasks/: methods.py  tasks.yml
logic/tests/: conftest.py  test_logic.py
logic/tests/common/: test_aws_cli.py  test_repo.py
logic/tests/minicourse/: test_create_minicourse.py  test_get_minicourse.py  test_update_minicourse.py
logic/tests/minicourse/category/: test_create_category.py
logic/tests/problem/: test_create_problem.py
logic/tests/problem/evaluation/: test_evaluate_problem.py
logic/tests/utils/: test_date.py  test_files.py  test_id_generator.py
logic/tests/video/: test_create_video.py
op/: base.py  caller.py  interface.py  logic.py
